# sentinelops-stack

./: .gitignore  docker-compose.yml
api-gateway/: Dockerfile  gateway.py  requirements.txt
backend/: .gitignore  Cargo.toml  Dockerfile  README.md
backend/.github/workflows/: ci.yml
backend/contracts/: hardhat.config.js
backend/contracts/contracts/: SentinelAnchor.sol
backend/contracts/scripts/: deploy.js
backend/edge-agent/: Cargo.toml  Dockerfile  docker-compose.yml
backend/edge-agent/openplc/: Dockerfile
backend/edge-agent/src/: main.rs
backend/lean/: PropSound.lean  lakefile.lean
backend/lean/ffi/: Cargo.toml  blake3.c  blake3.h  blake3_impl.h  build.rs  ffi.c
backend/ledger/: Cargo.toml  docker-compose.yml
backend/ledger/src/: batch.rs  export_phmsa.rs
backend/proof-engine/: Cargo.toml  Dockerfile  docker-compose.yml
backend/proof-engine/benches/: engine_bench.rs
backend/proof-engine/src/: cnf.rs  cnf_tseitin.rs  dsl.rs  lib.rs  main.rs  monitor.rs  sat.rs
frontend/: Dockerfile  README.md  index.html  package-lock.json  tailwind.config.ts  vite.config.test.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertPanel.tsx  AppSidebar.tsx  AuditBundlePanel.tsx  EmptyState.tsx  KafkaStatusBanner.tsx  MetricCard.tsx  ProofDetailsDrawer.tsx  ProofExplorerTable.tsx  ProofTrendChart.tsx  RecentProofsTable.tsx  ServiceCard.tsx  StatusBadge.tsx  SystemHealthCard.tsx  SystemOverview.tsx
frontend/src/components/__tests__/: EmptyState.test.tsx  StatusBadge.test.tsx
frontend/src/hooks/: useProofs.ts
frontend/src/hooks/__tests__/: useDebounce.test.tsx
frontend/src/pages/: Dashboard.tsx  ProofExplorer.tsx  Settings.tsx
frontend/src/test/: setup.ts
