[package]
name        = "edge-agent"
version     = "0.1.0"
edition     = "2021"

[dependencies]
chrono          = "0.4"
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tokio           = { version = "1", features = ["full"] }
tokio-modbus    = { version = "0.7", features = ["tcp"] }
rdkafka         = { version = "0.34", features = ["tokio", "cmake-build"] }
anyhow          = "1"
log             = "0.4"
env_logger      = "0.11"
dotenv          = "0.15"

[features]
sgx = []   # compile-time flag only – see Dockerfile stage
