[package]
name    = "proof-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "proof_engine"
path = "src/lib.rs"

[[bin]]
name = "proof-engine"
path = "src/main.rs"

[dependencies]
anyhow       = "1"
chrono       = "0.4"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
simd-json    = "0.13"
env_logger   = "0.11"
log          = "0.4"
blake3       = "1.5"
tokio        = { version = "1", features = ["full"] }
criterion    = { version = "0.5", optional = true }
itertools    = "0.12"
thiserror    = "1"
z3           = { version = "0.11", features = ["static-link-z3"], default-features = false }
libsentinel_ffi = { git = "https://github.com/fraware/sentinelops.git", package = "libsentinel_ffi", subdir = "lean/ffi" }
tokio-stream   = { version = "0.1", features = ["sync"] }
hex            = "0.4"
dotenvy        = "0.15"          # cross-platform replacement for `dotenv`
rdkafka        = { version = "0.34", features = ["tokio", "cmake-build"] }
once_cell      = "1"

[features]
model-reuse = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "engine_bench"
harness = false
